# ai-red-teaming-engine

./: .env.example  .gitignore  .redteam-ignore.example  .redteam-rules.example.yaml  GUIDE.md  README.en.md  README.md  SPEC_v0.1.md  engine.py  eval_accuracy.py  eval_results.json  pyproject.toml
.github/workflows/: security-audit.yml
redteam/: __init__.py  analyzer.py  cache.py  chunker.py  cli.py  cli_backends.py  comparator.py  config.py  custom_rules.py  dashboard.py  extractor.py  fixer.py  formatters.py  ignorer.py  immune_system.py  llm_client.py  lsp_server.py  masker.py  mcp_server.py  memory_poisoning.py  models.py  multi_agent.py  normalizer.py  pipeline.py  prompt_injection.py  prompts.py  scorer.py  static_tools.py  watcher.py
tests/: sample_vulnerable.py  test_chunker.py  test_comparator.py  test_custom_rules.py  test_dashboard_rules.py  test_ignorer.py  test_immune_system.py  test_lsp_server.py  test_masker.py  test_memory_poisoning.py  test_prompt_injection.py  test_scorer.py  test_static_tools.py
tests/fixtures/auth_bypass/: expected.json  vulnerable.py
tests/fixtures/command_injection/: expected.json  vulnerable.py
tests/fixtures/hardcoded_secret/: expected.json  vulnerable.py
tests/fixtures/insecure_deserialization/: expected.json  vulnerable.py
tests/fixtures/path_traversal/: expected.json  vulnerable.py
tests/fixtures/prompt_injection/: expected.json  vulnerable.py
tests/fixtures/sql_injection/: expected.json  vulnerable.py
tests/fixtures/ssrf/: expected.json  vulnerable.py
tests/fixtures/weak_crypto/: expected.json  vulnerable.py
tests/fixtures/xxe/: expected.json  vulnerable.py
